versions/v2.9/modules/en/pages/installation-and-upgrade/hosted-kubernetes/cloud-marketplace/supportconfig.adoc
= Supportconfig Bundle
:page-languages: [en, zh]
:revdate: 2024-11-19
:page-revdate: {revdate}
:community-path: integrations-in-rancher/cloud-marketplace/supportconfig.adoc 
:product-path: installation-and-upgrade/hosted-kubernetes/cloud-marketplace/supportconfig.adoc

After installing the CSP adapter, you will have the ability to generate a supportconfig bundle. This bundle is a tar file which can be used to quickly provide information to support.

These bundles can be created through Rancher or through direct access to the cluster that Rancher is installed on. Note that accessing through Rancher is preferred.

NOTE: Only admin users can generate/download supportconfig bundles, regardless of method.

== Accessing Through Rancher

First, click on the hamburger menu. Then click the `Get Support` button.

image::support-help.png[Get Support]

In the next page, click on the `Generate Support Config` button.

NOTE: If the adapter is not installed, the option to generate the supportconfig bundle will not be present. You must install the CSP adapter to generate a supportconfig bundle.

image::generate-support-config.png[Get Support]

== Accessing Without Rancher

First, generate a kubeconfig for the cluster that Rancher is installed on.

NOTE: If Rancher is down, you will not be able to use a kubeconfig token generated by Rancher to access the cluster.

Configure your shell environment to use this kubeconfig token:

[,bash]
----
export KUBECONFIG=$MY_KUBECONFIG_PATH
----

It is recommended to create a temporary working directory while running this command, like below:

[,bash]
----
mkdir temp && cd temp
----

Then, retrieve the supportconfig bundle:

[,bash]
----
mkdir rancher && kubectl get configmap csp-config -n cattle-csp-adapter-system -o=jsonpath='{.data.data}' >> rancher/config.json && tar -c -f supportconfig_rancher.tar rancher && rm -rf rancher
----

This will create a `supportconfig_rancher.tar` file in your current directory.

Users who run these commands on Mac may experience issues due to incompatibilities between gnu-tar and bsd-tar. If support has issues reading a supportconfig that you produce, try using the below command after making gnu-tar accessible as `gtar` on your path:

[,bash]
----
mkdir rancher && kubectl get configmap csp-config -n cattle-csp-adapter-system -o=jsonpath='{.data.data}' >> rancher/config.json && gtar -c -f supportconfig_rancher.tar rancher && rm -rf rancher
----
